@@ -1,3 +1,4 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 .circleci
+^\.github$
