@@ -1,3 +1,7 @@
+2022-10-24  Alexios Galanos <alexios@4dscape.com>
+	* DESCRIPTION (Version): New version is 1.4-9.
+	* Fix to gig.c warning about prototype declaration.
+	
 2022-04-18  Alexios Galanos <alexios@4dscape.com>
 	* DESCRIPTION (Version): New version is 1.4-8.
 	* Macros fixed in C code based on changes to headers and warning from CRAN.
